# String-Multitool

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_TSV_CONVERTER.md  README_TSV_TRANSLATE.md  SECURITY.md  String_Multitool.py  String_Multitool_New.py  TEST_README.md  build.ps1  convertbytsv.py  migrate_add_tsv_file_name.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-tsv.txt  requirements.txt  setup.py  test.txt  test_cli_functionality.py  test_clipboard_notification.py  test_daemon.py  test_demo.db  test_hotkey.py  test_hotkey_integration.py  test_readme_examples.py  test_shell.db  test_shell_functionality.py  test_simple.py  test_system_integration.py  test_transform.py  test_tsv_case_insensitive.py  test_tsv_operations.py  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_report.yml  security_vulnerability.yml
.github/workflows/: README.md  build.yml  cd.yml  ci.yml  coverage.yml  dependabot-auto-merge.yml  dependency-review.yml  issue-management.yml  release.yml  rollback.yml  security.yml
.kiro/specs/clipboard-transformer/: design.md  requirements.md  tasks.md
.kiro/specs/dynamic-clipboard-refresh/: design.md  requirements.md  tasks.md
config/: daemon_config.json  hotkey_config.json  logging_config.json  logging_config.local.json  security_config.json  transformation_rules.json  tsv_converter.json  tsv_translate.json
config/tsv_rules/: sample_japanese_english.tsv  technical_terms.tsv
data/: tsv_converter.db
docs/: API_REFERENCE.md  ARCHITECTURE.md  DELIVERABLES_SUMMARY.md  DEVELOPER_GUIDE.md
docs/developer-guide/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  architecture-overview.md  github-actions-migration.md  mypy-configuration.md
docs/features/: CASE_INSENSITIVE_TSV_GUIDE.md  data-flow-diagrams.md
docs/localization/: README-ja.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/_static/js/: custom.js
docs/sphinx/source/: api-reference.rst  architecture.rst  conf.py  getting-started.rst  index.rst  modules.rst  sphinx-usage.rst
string_multitool/: __init__.py  application_factory.py  cli.py  exceptions.py  main.py
string_multitool/core/: __init__.py  argument_parser.py  config.py  constants.py  crypto.py  dependency_injection.py  error_handling.py  transformation_base.py  transformations.py  tsv_conversion_strategies.py  types.py  types_modern.py
string_multitool/io/: __init__.py  clipboard.py  manager.py
string_multitool/models/: __init__.py  config.py  crypto.py  crypto_transformations.py  dependency_injection.py  hash_transformations.py  interactive.py  text_format_transformations.py  transformation_base.py  transformation_coordinator.py  transformations.py  tsv_conversion_strategies.py  tsv_transformer.py  types.py  types_modern.py
string_multitool/modes/: __init__.py  clipboard_monitor.py  daemon.py  daemon_config_manager.py  daemon_refactored.py  hotkey.py  hotkey_sequence_manager.py  interactive.py  system_tray.py
string_multitool/transformations/: __init__.py  advanced_transformations.py  basic_transformations.py  case_transformations.py  encoding_transformations.py  encryption_transformations.py  formatting_transformations.py  hash_transformations.py  string_operations.py
string_multitool/utils/: __init__.py  lifecycle_manager.py  logger.py  unified_logger.py
tests/: conftest.py  test_code_quality.py  test_modern_comprehensive.py  test_readme_examples.py  test_signal_handler.py  test_system_integration.py  test_transform.py  test_tsv_case_insensitive.py  test_tsv_operations.py  test_unicode.py
tsv_converter/cli/: __init__.py  completion.py  main.py
tsv_converter/core/: __init__.py  engine.py  exceptions.py  security.py  types.py
tsv_converter/services/: base.py  conversion_service.py  file_watcher.py  sync_service.py
tsv_converter/tests/: conftest.py  test_cli.py  test_engine.py
tsv_translate/: __init__.py
tsv_translate/cli/: __init__.py  completion.py  main.py
tsv_translate/core/: __init__.py  engine.py  exceptions.py  security.py  types.py
tsv_translate/models/: __init__.py  base.py  conversion_rule.py  rule_set.py
tsv_translate/services/: __init__.py  base.py  conversion_service.py  file_watcher.py  sync_service.py
tsv_translate/tests/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_models.py  test_services.py
